instagaram wrap height fix

--- a/styles.css
+++ b/styles.css
@@ -306,7 +306,7 @@ h1, h2, h3, h4, h5, h6, .w3-slim, .w3-wide {
     right: 0;
     margin: 0 auto;
     width: 90%;
-    bottom: 16px;
+    bottom: 70px;
 }
 
 .instagram .w3-col.m9  {
